# k1s

./: .docker-compose.yml.swp  README.md  curl_loop.sh  docker-compose.yml  docker_stats_20241031112036.csv  docker_stats_20241031112132.csv  docker_stats_20241031112232.csv  dockerautoscaleup.py  improveauto.py  index.html  pyproject.toml
docker/nginx/: .default.conf.swp  default.conf
src/k1s/: autoscale.py  main.py
src/k1s/pages/: 자원사용량현황.py
