[project]
name = "k1s"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "GITSangWoo", email = "dogcenta@gmail.com"},
]
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true

[project.scripts]
i = 'k1s.autoscale:scalein'
o = 'k1s.autoscale:scaleout'
